[workspace]
members = ["generate-cpp"]

[workspace.dependencies]
candid = "0.8.4"

[package]
name = "ic-agent-wrapper"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["staticlib","lib"]

[dependencies]
# dfinity
ic-agent = "0.24.1"
ic-utils = "0.24.1"
# async runtime
tokio = { version = "1.18", features = ["full"] }
# serde
serde = "1.0.*"
serde_json = "1.0.*"
serde_derive = "1.0.*"
# encrypt
getrandom = { version = "0.2.8" }
ring = "0.16.*"
k256 = "0.13.1"
base64 = "0.21.2"
# helper
hex = "0.4"
anyhow = "1.0.*"
# ffi
libc = "0.2"
candid.workspace = true
cty = "0.2.2"
arrayref = "0.3.7"
once_cell = { version = "1.18.0", features = ["parking_lot"] }

[dev-dependencies]
const-str = "0.5.2"

[build-dependencies]
cbindgen = "0.20.0"

[features]
default = []
