[workspace]
members = ["generate-cpp"]

[workspace.dependencies]
candid = "0.8.4"

[package]
name = "ic-agent-wrapper"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["staticlib","lib"]

[dependencies]
# dfinity
ic-agent = "0.35.0"
ic-utils = "0.35.0"
# async runtime
futures = "0.3"
tokio = { version = "1.18", features = ["full"] }
# serde
serde = "1.0.*"
serde_json = "1.0.*"
serde_derive = "1.0.*"
# encrypt
getrandom = { version = "0.2.*" }
untrusted = { version = "0.9" }
ring = "0.16.*"
k256 = "0.13.*"
base64 = "0.21.*"
rust-argon2 = "1.0.*"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
# helper
hex = "0.4"
anyhow = "1.0.*"
lazy_static = "1.4.*"
chrono = { version = "0.4.*", features = ["serde"] }
garcon = { version = "0.2.3", features = ["async"] }
# ffi
libc = "0.2"
candid.workspace = true
cty = "0.2.2"
safer-ffi = { version = "0.0.10", features = ["proc_macros"] }
crypto_api_osrandom = "0.2.0"
const-str = "0.5.*"
arrayref = "0.3.7"

[build-dependencies]
cbindgen = "0.20.0"

[features]
default = []
