[workspace]
members = ["generate-cpp"]

[workspace.dependencies]
candid = "0.8.4"

[package]
name = "ic-agent-wrapper"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["staticlib","lib"]

[dependencies]
# dfinity
ic-agent = { version = "0.39.3", features = ["ring"] }
ic-utils = "0.39.3"
# async runtime
futures = "0.3"
tokio = { version = "1.18", features = ["full"] }
# serde
serde = "1.0.*"
serde_json = "1.0.*"
serde_derive = "1.0.*"
# encrypt
getrandom = { version = "0.3.1" }
untrusted = { version = "0.9" }
ring = "0.17.11"
k256 = "0.13.1"
base64 = "0.22.1"
rust-argon2 = "2.1.0"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
sha2 = "0.10"
# helper
hex = "0.4"
anyhow = "1.0.*"
lazy_static = "1.4.*"
chrono = { version = "0.4.*", features = ["serde"] }
garcon = { version = "0.2.3", features = ["async"] }
# ffi
libc = "0.2"
candid.workspace = true
cty = "0.2.2"
safer-ffi = { version = "0.1.13", features = ["proc_macros"] }
crypto_api_osrandom = "0.2.0"
const-str = "0.6.2"
arrayref = "0.3.7"

[build-dependencies]
cbindgen = "0.28.0"

[features]
default = []
