[package]
name = "rs-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={ version = "3.1.18", features = ["derive"]} 
tokio = {version = "1.18.2", features = ["full"]}
sha2= "0.10.2"
async-trait = "0.1.68"
candid = "0.7.14"
ic-types = "0.3.0"
serde = "1.0.137"
serde_cbor = "0.11.0"
garcon = "0.2.3"
ic-utils = "0.23.2"
ic-agent = "0.23.2"




